--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,9 @@ set(KV_LIBS
     kv_common
 )
 
-target_link_libraries(kv ${KV_LIBS})
+set(KV_THIRDPARTY_LIBS leveldb)
+
+target_link_libraries(kv ${KV_LIBS} ${KV_THIRDPARTY_LIBS})
 
 target_include_directories(
     kv PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
